# caterva

./: .clang-format  .gitignore  .gitmodules  ANNOUNCE.md  CATERVA_METALAYER.md  CATERVA_METALAYER.rst  CMakeLists.txt  CONTRIBUTING.rst  CPPLINT.cfg  DEVELOPING-GUIDE.rst  LICENSE  README.md  README_CATERVA_METALAYER.rst  RELEASE_NOTES.md  RELEASE_NOTES.rst  RELEASING.rst  ROADMAP.md  ROADMAP.rst  azure-pipelines-coverage.yml  azure-pipelines.yml  environment.yml
.github/workflows/: cmake.yml
bench/: CMakeLists.txt  bench_get_slice.c  bench_zfp_getitem.c
caterva/: caterva.c  caterva.h  caterva_blosc.c  caterva_blosc.h  caterva_plainbuffer.c  caterva_plainbuffer.h  caterva_utilities.h  caterva_utils.c  caterva_utils.h  ndcell.c  ndlz.h  ndlz4x4.c  ndlz4x4.h  ndlz8x8.c  ndlz8x8.h
cmake/: FindBLOSC2.cmake
cunit-tests/: CMakeLists.txt  test_common.h  test_unit.c
cunit-tests/minunit/: minunit.h
cunittests/: CMakeLists.txt  main.c  test_append.c
doc/: requirements.txt
doc/doxygen/: Doxyfile
doc/sphinx/: conf.py  index.rst
doc/sphinx/getting_started/: installation.rst  overview.rst
doc/sphinx/getting_started/tutorials/: basics.rst  index.rst
doc/sphinx/reference/: array.rst  context.rst  metalayers.rst  wrappers.rst
docs/: requirements.txt
docs/doxygen/: Doxyfile
docs/sphinx/: api.rst  conf.py  index.rst  installation.rst  reference.rst  tutorials.rst  user-guide.rst  wrappers.rst
docs/sphinx/.static/: custom.css
docs/sphinx/_static/: custom.css
docs/sphinx/_static/css/: custom.css
docs/sphinx/development/: index.rst  release-notes.rst  roadmap.rst
docs/sphinx/getting-started/: description.rst  index.rst  installation.rst  overview.rst
docs/sphinx/getting_started/: index.rst  overview.rst
docs/sphinx/reference/: api.rst  array.rst  context.rst  index.rst  wrappers.rst
examples/: CMakeLists.txt  caterva_get_slice.c  caterva_persistency.c  example_empty_shape.c  example_frame_generator.c  example_get_slice.c  example_ndlz.c  example_oindex.c  example_persistency.c  example_plainbuffer.c  example_plugins.c  example_plugins_codecs.c  example_plugins_filters.c  example_print_meta.c  generate_caterva.c  persistency.c  simple.c
mutests/: CMakeLists.txt  test_append.c  test_common.h  test_copy.c  test_get_slice.c  test_get_slice_buffer.c  test_persistency.c  test_repart_chunk.c  test_squeeze.c  test_to_buffer.c
mutests/minunit/: assert.h  minunit.h
notebooks/: pcaterva.py  pcatervaW.py  test_get_slice.ipynb
notebooks/demo/: demo.py  demo_.c  demo_.py
notebooks/test_get_slice/: generating_results_for_get_slice.ipynb
noteoboks/test_get_slice/: generating_results_for_get_slice.ipynb
partcompute/: partcompute.c  partcompute.h
tests/: CMakeLists.txt  assert.h  benchmark.h  core.h  cutest.h  main.c  main.h  test_append.c  test_append_2.c  test_caterva_get_slice.c  test_common.h  test_copy.c  test_delete.c  test_derepart_chunk.c  test_fill.c  test_full.c  test_get_slice.c  test_get_slice.csv  test_get_slice_2.c  test_get_slice_buffer.c  test_get_slice_buffer_2.c  test_insert.c  test_matrix_mult.c  test_metalayers.c  test_ndcell.c  test_ndcell_2.c  test_ndlz.c  test_persistency.c  test_repart.c  test_repart_chunk.c  test_reshape.c  test_resize.c  test_roundtrip.c  test_roundtrip.csv  test_save.c  test_schunk_fill_from_array_roundtrip.c  test_serialize.c  test_set_slice_buffer.c  test_squeeze.c  test_squeeze_index.c  (+4 more)
tests/include/: assert.h  benchmark.h  core.h  main.h
tests/minunit/: assert.h  minunit.h
